--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,10 @@
 NODE_ENV=development
 PORT=5000
+CLIENT_URL=http://localhost:5173
 MONGO_URI=mongodb://localhost:27017/portfolio
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=your_jwt_secret_key_change_this_in_production
 JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
 EMAIL_SERVICE=gmail
 EMAIL_USERNAME=your_email@gmail.com
 EMAIL_PASSWORD=your_email_password
